<resources>
    <string name="app_name">Assignment 2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_check_in">Check In</string>
    <string name="title_admin">Admin</string>
    <string name="title_clinic">Clinic</string>
    <string name="user_login">User Login</string>
    <string name="password">Password</string>
    <string name="ic_no">IC No.</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="admin_login">Admin Login</string>
    <string name="title_activity_admin">MainActivity</string>
    <string name="title_activity_person">PersonActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <!--     TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="clinic_name">Clinic Name</string>
    <string name="clinic_login">Clinic Login</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="unvaccinated_info">
        You will be permitted entry into some common public spaces, such as restaurants and retail stores.
        However, you will not be allowed to enter vaccinated-only zones such as hotels, gyms and swimming pools.
    </string>

    <string name="first_shot_info">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
    </string>

    <string name="vaccinated_info">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
    </string>

    <string name="recovered_info">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
    </string>
</resources>