<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.person.login.PersonFragment" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:textSize="28sp"
                android:text="@string/user_login" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:stretchColumns="1,2">

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center"
                        android:text="@string/ic_no"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/usernameField"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:autofillHints=""
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:textSize="16sp"
                        tools:ignore="LabelFor" />
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center"
                        android:text="@string/password"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/passwordField"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:autofillHints=""
                        android:ems="10"
                        android:inputType="textPassword"
                        android:textSize="16sp"
                        tools:ignore="LabelFor" />
                </TableRow>
            </TableLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:stretchColumns="1,2">

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/loginButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center"
                        android:text="@string/login" />

                </TableRow>
            </TableLayout>


            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="125dp"
                android:src="@drawable/blank" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>