<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.person.PersonLoginFragment" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:textSize="28sp"
                android:fontFamily="@font/montserrat"
                android:text="@string/admin_login" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:stretchColumns="1,2">

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center"
                        android:text="@string/name"
                        android:fontFamily="@font/montserrat"
                        android:textSize="16sp" />

                    <AutoCompleteTextView
                        android:id="@+id/usernameField"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="9"
                        android:fontFamily="@font/montserrat"
                        android:layout_gravity="end"/>
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center"
                        android:text="@string/password"
                        android:fontFamily="@font/montserrat"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/passwordField"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:autofillHints=""
                        android:ems="10"
                        android:inputType="textPassword"
                        android:textSize="16sp"
                        android:fontFamily="@font/montserrat"
                        tools:ignore="LabelFor" />
                </TableRow>
            </TableLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:stretchColumns="1,2">

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/loginButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/login" />

                </TableRow>
            </TableLayout>


            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="125dp"
                android:src="@drawable/blank" />

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/toClinicTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:clickable="true"
        android:focusable="true"
        android:textColor="#1a73e8"
        android:text="I am signing in as a clinic" />

    <TextView
        android:id="@+id/toPersonTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/toClinicTextView"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:focusable="true"
        android:textColor="#1a73e8"
        android:text="I am signing in as a citizen" />

</RelativeLayout>